--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "node-telegram-bot-api": "^0.30.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "eslint": "6.8.0",
+    "prettier": "1.19.1"
   }
 }
