--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
-    "prettier": "1.19.1"
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "prettier": "^1.19.1"
   }
 }
