--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   ],
   "main": "bot.js",
   "scripts": {
+    "build": "flow-remove-types src/ -d lib/",
+    "start": "node lib/bot_telegram.js",
+    "flow": "flow",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -25,10 +28,13 @@
     "string-similarity": "^4.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
+    "flow-bin": "^0.118.0",
+    "flow-remove-types": "^2.118.0",
     "prettier": "^1.19.1"
   }
 }
