--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "no-console": "off",
     "no-restricted-syntax": "off",
     "max-classes-per-file": "off",
+    "import/prefer-default-export": "off",
     "prefer-destructuring": ["error", { "array": false }],
     "import/first": "off",
     "import/extensions": [
