added test configuration with Chai + Mocha and created a simple test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   "plugins": ["@typescript-eslint", "prettier", "promise", "import"],
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "mocha": true
   },
   "rules": {
     "no-console": "off",
