--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "tsc",
     "gcp-build": "npm run build",
     "start": "node lib/bot_telegram.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "dependencies": {
     "dotenv": "^6.2.0",
@@ -29,20 +29,25 @@
     "translation-google": "^0.2.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/core-js": "^2.5.3",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
     "@types/node-telegram-bot-api": "^0.40.2",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
+    "mocha": "^7.1.1",
     "prettier": "^1.19.1",
+    "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   }
 }
