Moved translating logic to a separate file, added simple tests (#24)
* updated dependencies

* added test configuration with Chai + Mocha

* added a few simple tests

* updated .gitignore

* added GCP_API_KEY to CoreConfig

* implemented falling back to Google Translate API when free alternative doesn't work

* translation stuff now happens in translator.ts

* improved and fine-tuned test

* made GCP_API_KEY not required

* simplified languages.json file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,12 +14,14 @@
   "plugins": ["@typescript-eslint", "prettier", "promise", "import"],
   "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "mocha": true
   },
   "rules": {
     "no-console": "off",
     "no-restricted-syntax": "off",
     "max-classes-per-file": "off",
+    "import/prefer-default-export": "off",
     "prefer-destructuring": ["error", { "array": false }],
     "import/first": "off",
     "import/extensions": [
