--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "type": "git",
     "url": "https://github.com/bartekpacia/telegram-lang-enforcer"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "version": "1.0.0",
   "description": "Simple multi-platform bot enforcing a specific language in groups.",
   "author": "Bartek Pacia",
@@ -18,11 +21,13 @@
     "gcp-build": "npm run build",
     "start": "node lib/app.js --telegram --discord",
     "telegram": "node lib/app.js --telegram",
+    "telegram_dev": "node lib/app.js --telegram --dev",
     "discord": "node lib/app.js --discord",
     "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "dependencies": {
-    "discord.js": "^12.1.1",
+    "@google-cloud/secret-manager": "^3.0.0",
+    "discord.js": "^12.2.0",
     "dotenv": "^6.2.0",
     "firebase-admin": "^8.10.0",
     "node-telegram-bot-api": "^0.30.0",
@@ -36,7 +41,7 @@
     "@types/core-js": "^2.5.3",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.1",
-    "@types/node-telegram-bot-api": "^0.40.2",
+    "@types/node-telegram-bot-api": "^0.40.3",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
