--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "no-restricted-syntax": "off",
     "max-classes-per-file": "off",
     "class-methods-use-this": "off",
+    "no-unused-expressions": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
